Styles/styles.css
/* ... */
.grid_lift_desc .item:nth-child(1)  { grid-area: logo; }
.grid_lift_desc .item:nth-child(2)  { grid-area: book_now; }
.grid_lift_desc .item:nth-child(3)  { grid-area: social1; }
.grid_lift_desc .item:nth-child(4)  { grid-area: social2; }
.grid_lift_desc .item:nth-child(5)  { grid-area: social3; }
.grid_lift_desc .item:nth-child(6)  { grid-area: nav; }
.grid_lift_desc .item:nth-child(7)  { grid-area: services; }
.grid_lift_desc .item:nth-child(8) { grid-area: desc; }
.grid_lift_desc .item:nth-child(9) { grid-area: bottom_banner; }
.grid_lift_desc .item:nth-child(10) { grid-area: footer1; }
.grid_lift_desc .item:nth-child(11) { grid-area: footer2; }

/*layout of about page*/
.grid_about {
  display: grid;
  grid-gap: 0vw;
  min-height: 100vh;
  padding: 2vw;
}

.grid_about {
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto;
  grid-template-areas:
  "logo logo logo"
  "book_now book_now book_now"
  "social1 social2 social3"
  "nav nav nav"
  "rev_txt rev_txt rev_txt"
  "rev rev rev"
  "rev_src rev_src rev_src"
  "k_img k_prof k_prof"
  "con_img con_prof con_prof"
  "inter inter inter"
  "bottom_banner bottom_banner bottom_banner"
  "footer1 footer2 footer2";
    
}

@media screen and (min-width: 750px) {
  .grid_about {
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: auto;
    grid-template-areas:
    "logo logo book_now social1 social2 social3"
    "nav nav nav nav nav nav"
    "rev_txt rev_txt rev_txt rev_txt rev_txt rev_txt"
    "rev rev rev rev rev rev"
    "rev_src rev_src rev_src rev_src rev_src rev_src"
    "k_img k_img k_prof k_prof k_prof k_prof"
    "con_img con_img con_prof con_prof con_prof con_prof"
    "inter inter inter inter inter inter"
    "bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner"
    "footer1 footer1 footer1 footer2 footer2 footer2";
  }
}

@media screen and (min-width: 1400px) {
  .grid_about {
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: auto;
    grid-template-areas:
    "logo logo logo logo book_now book_now book_now social1 social2 social3"
    "nav nav nav nav nav nav nav nav nav nav"
    "rev_txt rev_txt rev_txt rev_txt rev_txt rev_txt rev_txt rev_txt rev_txt rev_txt"
    "rev rev rev rev rev rev rev rev rev rev"
    "rev_src rev_src rev_src rev_src rev_src rev_src rev_src rev_src rev_src rev_src"
    "k_img k_img k_img k_img k_prof k_prof k_prof k_prof k_prof k_prof"
    "con_img con_img con_img con_img con_prof con_prof con_prof con_prof con_prof con_prof"
    "inter inter inter inter inter inter inter inter inter inter"
    "bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner"
    "footer1 footer1 footer1 footer1 footer1 footer2 footer2 footer2 footer2 footer2";
    }
}

.grid_about .item:nth-child(1)  { grid-area: logo; }
.grid_about .item:nth-child(2)  { grid-area: book_now; }
.grid_about .item:nth-child(3)  { grid-area: social1; }
.grid_about .item:nth-child(4)  { grid-area: social2; }
.grid_about .item:nth-child(5)  { grid-area: social3; }
.grid_about .item:nth-child(6)  { grid-area: nav; }
.grid_about .item:nth-child(7)  { grid-area: rev_txt; }
.grid_about .item:nth-child(8) { grid-area: rev; }
.grid_about .item:nth-child(9) { grid-area: rev_src; }
.grid_about .item:nth-child(10) { grid-area: k_img; }
.grid_about .item:nth-child(11) { grid-area: k_prof; }
.grid_about .item:nth-child(12)  { grid-area: con_img; }
.grid_about .item:nth-child(13) { grid-area: con_prof; }
.grid_about .item:nth-child(14) { grid-area: inter; }
.grid_about .item:nth-child(15) { grid-area: bottom_banner; }
.grid_about .item:nth-child(16) { grid-area: footer1; }
.grid_about .item:nth-child(17) { grid-area: footer2; }

/*layout of contact page*/
.grid_contact {
  display: grid;
  grid-gap: 0vw;
  min-height: 100vh;
  padding: 2vw;
}

.grid_contact{
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto;
  grid-template-areas:
  "logo logo logo"
  "book_now book_now book_now"
  "social1 social2 social3"
  "nav nav nav"
  "map map map"
  "exte exte parking"
  "hours hours hours"
  "bottom_banner bottom_banner bottom_banner"
  "footer1 footer2 footer2";
    
}

@media screen and (min-width: 750px) {
  .grid_contact {
    grid-template-columns: repeat(6, 1fr);
    grid-template-rows: auto;
    grid-template-areas:
    "logo logo book_now social1 social2 social3"
    "nav nav nav nav nav nav"
    "map map map map exte exte"
    "hours hours hours parking parking parking"
    "bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner"
    "footer1 footer1 footer1 footer2 footer2 footer2";
  }
}

@media screen and (min-width: 1400px) {
  .grid_contact {
    grid-template-columns: repeat(10, 1fr);
    grid-template-rows: auto;
    grid-template-areas:
    "logo logo logo logo book_now book_now book_now social1 social2 social3"
    "nav nav nav nav nav nav nav nav nav nav"
    "map map map map map map map map exte exte"
    "hours hours hours hours hours parking parking parking parking parking"
    "bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner bottom_banner"
    "footer1 footer1 footer1 footer1 footer1 footer2 footer2 footer2 footer2 footer2";
    }
}

.grid_contact .item:nth-child(1)  { grid-area: logo; }
.grid_contact .item:nth-child(2)  { grid-area: book_now; }
.grid_contact .item:nth-child(3)  { grid-area: social1; }
.grid_contact .item:nth-child(4)  { grid-area: social2; }
.grid_contact .item:nth-child(5)  { grid-area: social3; }
.grid_contact .item:nth-child(6)  { grid-area: nav; }
.grid_contact .item:nth-child(7)  { grid-area: map; }
.grid_contact .item:nth-child(8) { grid-area: exte; }
.grid_contact .item:nth-child(9) { grid-area: hours; }
.grid_contact .item:nth-child(10) { grid-area: parking; }
.grid_contact .item:nth-child(11) { grid-area: bottom_banner; }
/* ... */

